[gd_scene load_steps=3 format=3 uid="uid://b4dccek7oxckx"]

[ext_resource type="Script" path="res://scripts/UI/slot.gd" id="1_htxqp"]
[ext_resource type="Texture2D" uid="uid://bainvhulx7r1" path="res://assets/terraria/Inventory_Back.png" id="3_i7dob"]

[node name="Slot" type="TextureRect"]
custom_minimum_size = Vector2(52, 52)
offset_right = 52.0
offset_bottom = 52.0
texture = ExtResource("3_i7dob")
script = ExtResource("1_htxqp")

[node name="ItemContainer" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="QuantityLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.135
anchor_top = 0.5
anchor_right = 0.846
anchor_bottom = 0.942
offset_left = -0.0200005
offset_right = 0.00799942
offset_bottom = 0.0159988
text = "9999"

[node name="NumberLabel" type="Label" parent="."]
layout_mode = 1
offset_right = 23.0
offset_bottom = 23.0
text = "1"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
